:sparkles: (lint): Configuration to ignore commits